--- a/frontend/src/app/component/product-list/product-list.component.html
+++ b/frontend/src/app/component/product-list/product-list.component.html
@@ -1,20 +1,49 @@
-<p>List of Products</p>
+<div class="main-content">
+    <div class="section-content section-content-p30">
+        <div class="container-fluid">
+            <div class="row">
 
-<table class="table">
-    <thead class="table-dark">
-        <tr>
-            <th></th>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Units in Stock</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr class="align-middle" *ngFor="let prod of products">
-            <td><img src="../../../assets/images/products/placeholder.png" height="50" /></td>
-            <td>{{prod.name}}</td>
-            <td>{{prod.unitPrice | currency:"USD"}}</td>
-            <td>{{prod.stock}}</td>
-        </tr>
-    </tbody>
-</table>
+                <div class="col-md-3" *ngFor="let prod of products">
+                    <div class="product-box">
+                        <a href="product-detail.html">
+                            <img src="{{ prod.imageUrl }}" class="img-responsive">
+                        </a>
+                        <a href="product-detail.html">
+                            <h1>{{prod.name}}</h1>
+                        </a>
+                        <!-- <h2>{{prod.description}}</h2> -->
+                        <div class="price">{{prod.unitPrice | currency:"USD"}}</div>
+                        <a href="#" class="primary-btn">Add to cart</a>
+                    </div>
+                </div>
+                <!-- <div class="clearfix"></div> -->
+
+            </div>
+
+            <div class="footer-pagination">
+                <div class="row">
+                    <div class="col-md-6"></div>
+                    <div class="col-md-3">
+                        <div class="items">
+                            <label>Item per page</label> <select>
+                                <option>10</option>
+                                <option>20</option>
+                                <option>30</option>
+                                <option>40</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="number">1 - 10 of 100</div>
+                    </div>
+                    <div class="col-md-1">
+                        <div class="arrows">
+                            <a href="#"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
